@@ -5,7 +5,7 @@
   <title>Famechos</title>
   <link>https://www.famechos.me/</link>
   <description>Famechos - News Article</description>
-  <lastBuildDate>Tue, 22 Oct 2024 14:15:57 +0800</lastBuildDate>
+  <lastBuildDate>Tue, 22 Oct 2024 14:23:38 +0800</lastBuildDate>
 <item>
   <title>KPOP界大事！RIIZE昇瀚回歸、防弹少年团金碩珍新單曲、aespa登頂iTunes榜單</title>
   <link>https://www.famechos.me/news/KPOP界大事！RIIZE昇瀚回歸、防弹少年团金碩珍新單曲、aespa登頂iTunes榜單.html</link>
@@ -284,5 +284,11 @@ YG娛樂旗下的新人女團BABYMONSTER（韓語：베이비몬스터）將於1
   <description>Hanni在國會聽證會上呼籲：相互尊重，杜絕職場霸凌...</description>
   <category>K-Pop</category>
   <pubDate>Tue, 22 Oct 2024 14:15:57 +0800</pubDate>
+</item><item>
+  <title>BTS成員鄭號錫退伍！18個月義務兵役結束，金碩珍前來迎接</title>
+  <link>https://www.famechos.me/news/BTS成員鄭號錫退伍！18個月義務兵役結束，金碩珍前來迎接.html</link>
+  <description>BTS成員鄭號錫退伍。韓國時間10月17日，BTS成員鄭號錫完成18個月的義務兵役，成為該團第二位退伍的成員。...</description>
+  <category>K-Pop</category>
+  <pubDate>Tue, 22 Oct 2024 14:23:38 +0800</pubDate>
 </item></channel>
 </rss>
