@@ -1,0 +1,272 @@
+<!DOCTYPE html>
+<head>
+<script type='application/ld+json'>
+{"@context": "https://schema.org", "@graph": [{"@type": "Article", "headline": "BTS\u6210\u54e1\u912d\u865f\u932b\u9000\u4f0d\uff0118\u500b\u6708\u7fa9\u52d9\u5175\u5f79\u7d50\u675f\uff0c\u91d1\u78a9\u73cd\u524d\u4f86\u8fce\u63a5", "description": "BTS\u6210\u54e1\u912d\u865f\u932b\u9000\u4f0d\uff0118\u500b\u6708\u7fa9\u52d9\u5175\u5f79\u7d50\u675f\uff0c\u91d1\u78a9\u73cd\u524d\u4f86\u8fce\u63a5", "url": "https://www.famechos.me/news/BTS\u6210\u54e1\u912d\u865f\u932b\u9000\u4f0d\uff0118\u500b\u6708\u7fa9\u52d9\u5175\u5f79\u7d50\u675f\uff0c\u91d1\u78a9\u73cd\u524d\u4f86\u8fce\u63a5.html", "image": "https://www.famechos.me/images/banner.jpg", "datePublished": "2024-10-22T14:23:26.914152+08:00", "author": {"@type": "Person", "name": "Famechos"}, "publisher": {"@type": "Organization", "name": "Famechos", "url": "https://www.famechos.me"}}, {"@type": "Organization", "name": "Famechos", "url": "https://www.famechos.me", "logo": "https://www.famechos.me/icons/favicon.png"}, {"@type": "WebSite", "name": "Famechos", "url": "https://www.famechos.me"}]}
+</script>
+<link rel="canonical" href="https://www.famechos.me/news/BTS成員鄭號錫退伍！18個月義務兵役結束，金碩珍前來迎接.html"/>
+<meta name="description" content="BTS成員鄭號錫退伍！金碩珍前來迎接，鄭號錫完成18個月義務兵役，重返娛樂圈。">
+
+<meta name="keywords" content="BTS, 鄭號錫, 退伍, 金碩珍, 義務兵役, 娛樂圈, KPOP">
+
+<link rel="stylesheet" href="../main-nav.css">
+<link rel="stylesheet" href="../main-content.css">
+<link rel="stylesheet" href="../main-small.css">
+<link rel="stylesheet" href="../post.css">
+<link rel="stylesheet" href="../main-footer.css">
+<link rel="stylesheet" href="../news.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+<link rel="stylesheet" href="https://fonts.googleapis.com/earlyaccess/notosanstc.css">
+        <meta property="og:url" content="https://www.famechos.me/news/BTS成員鄭號錫退伍！18個月義務兵役結束，金碩珍前來迎接.html" />
+        <meta property="og:title" content="BTS成員鄭號錫退伍！18個月義務兵役結束，金碩珍前來迎接" />
+        <meta property="og:description" content="BTS成員鄭號錫退伍！18個月義務兵役結束，金碩珍前來迎接" />
+        <meta property="og:image" content="https://www.famechos.me/images/banner.jpg" />
+        <meta property="twitter:card" content="summary_large_image" />
+        <meta property="twitter:title" content="BTS成員鄭號錫退伍！18個月義務兵役結束，金碩珍前來迎接" />
+        <meta property="twitter:description" content="BTS成員鄭號錫退伍！18個月義務兵役結束，金碩珍前來迎接" />
+        <meta property="twitter:image" content="https://www.famechos.me/images/banner.jpg" />
+<meta name="theme-color" content="white">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta property="og:locale" content="zh_TW" />
+        <meta property="og:site_name" content="Famechos" />
+<meta property="og:type" content="article" />
+<meta name="robots" content="index, follow" />
+<meta name="author" content="Famechos" />
+        <meta name="referrer" content="origin">
+<meta name="apple-mobile-web-app-capable" content="yes"/>
+        <meta name="apple-mobile-web-app-status-bar-style" content="black"/>
+        <meta name="apple-mobile-web-app-title" content="Avoir"/>
+        <meta name="apple-touch-fullscreen" content="yes"/>
+        
+<style> * {box-sizing: border-box;margin: 0;padding: 0;font-family: 'Noto Sans TC', sans-serif;scroll-behavior: smooth;}</style>
+
+</head>
+
+<body>
+
+<nav class="nav">
+    <div class="nav-outerbox">
+      <div class="nav-inner-left">
+        <div class="nav-name-logo">
+          <a href="https://www.famechos.me/"><img class="famechos-logo" src="../img/famechos_logo.png"></a>
+         
+        </div>
+        <div class="nav-separate">
+          <p>|</p>
+        </div>
+        <div class="nav-type-1 nav-type"><a href="https://www.famechos.me/k-pop.html">
+          <button class="nav-type-btn1 nav-type-btn">
+          <h2 class="nav-type-text">K-POP</h2>
+        </button></a>
+ 
+        </div>
+        <div class="nav-type-2 nav-type"><a href="https://www.famechos.me/j-pop.html">
+          <button class="nav-type-btn2 nav-type-btn">
+          <h2 class="nav-type-text">J-POP</h2>
+        </button></a>
+ 
+        </div>
+        <div class="nav-type-3 nav-type"><a href="https://www.famechos.me/drama.html">
+          <button class="nav-type-btn3 nav-type-btn">
+          <h2 class="nav-type-text">影視</h2>
+        </button></a>
+         
+        </div>
+        <div class="nav-type-4 nav-type"><a href="https://www.famechos.me/others.html">
+          <button class="nav-type-btn4 nav-type-btn">
+          <h2 class="nav-type-text">其他</h2>
+        </button></a>
+        </div>  
+      </div>
+      <div class="nav-inner-right">
+        <div class="nav-feedback-outer"><a href="https://www.famechos.me/about_us.html">
+          <button class="feedback-btn nav-type-btn">
+            <h2 class="nav-type-text">關於我們</h2>
+          </button></a>
+        </div>
+        <div class="nav-setting"><a href="https://www.famechos.me/privacy_policy.html">
+          <button class="setting-btn nav-type-btn">
+            <h2 class="nav-type-text">私隱條款</h2>
+          </button></a>
+        </div>
+        <div class="nav-list">
+          <button id="list-btn" class="list-btn nav-type-btn">
+            <i class="bi bi-list"></i>
+          </button>
+        </div>
+
+      </div>
+
+      <div id="list" class="nav-list-outer">
+        <div class="nav-type-1 nav-type list-type"><a href="https://www.famechos.me/k-pop.html">
+          <button class="list-type-btn">
+          <p>K-POP</p>
+          </button></a>
+        </div>
+
+        <div class="nav-type-2 nav-type list-type"><a href="https://www.famechos.me/j-pop.html">
+          <button class="list-type-btn">
+          <p>J-POP</p>
+          </button></a>
+        </div>
+
+        <div class="nav-type-3 nav-type list-type"><a href="https://www.famechos.me/drama.html">
+          <button class="list-type-btn">
+          <p>影視</p>
+          </button></a>
+        </div>
+
+        <div class="nav-type-4 nav-type list-type"><a href="https://www.famechos.me/others.html">
+          <button class="list-type-btn">
+          <p>其他</p>
+          </button></a>
+        </div>
+
+        <div class="nav-type-5 nav-type list-type"><a href="https://www.famechos.me/about_us.html">
+          <button class="list-type-btn">
+          <p>關於我們</p>
+          </button></a>
+        </div>
+
+        <div class="nav-type-6 nav-type list-type"><a href="https://www.famechos.me/privacy_policy.html">
+          <button class="list-type-btn">
+          <p>私隱條款</p>
+          </button></a>
+
+        </div>  
+
+      </div>
+     
+    </div>
+  </nav>
+
+
+  <main>
+    <div class="news-main-outer">
+      <div class="news-title-outer">
+        <h1>BTS成員鄭號錫退伍！18個月義務兵役結束，金碩珍前來迎接</h1>
+</div>
+
+      <div class="news-content-outer">
+
+        <div class="news-info-outer">
+          <p class="news-content-type">K-Pop</p>
+          <p class="news-date">22/10/2024</p>
+        </div>
+<p>韓國時間10月17日，BTS成員鄭號錫完成18個月的義務兵役，成為該團第二位退伍的成員。</p>
+<p>鄭號錫在原州市的第36步兵師團訓練營大門外現身，接受媒體採訪。他面帶微笑，與前來迎接他的隊友金碩珍擁抱，並接受金碩珍贈送的花束。</p>
+<p>在韓國，所有身體健全的男性都必須服兵役18至21個月。鄭號錫表示，在服兵役期間，他擔任教官，行軍許多次，因此遇到了許多原州市民。他感謝市民對士兵的歡迎和鼓勵，感到非常感動。</p>
+<p>鄭號錫向媒體敬禮並揮手致意，感謝媒體的採訪。他表示，服兵役期間，他感到士兵們工作辛苦，奉獻自己，為國家做出了許多貢獻。他認為，如果公眾能夠表現出如此溫暖的關心和愛意，將更加有意義。</p>
+<p>金碩珍是唯一前來迎接鄭號錫的成員，因為其他成員——Suga、RM、Jimin、V和Jungkook——正在服兵役。</p>
+<p>BTS的經紀公司BigHit Music事先通知粉絲不要前往迎接，以免造成人潮擁擠。</p><h2>鄭號錫退伍後將恢復個人活動</h2>
+<p>鄭號錫於4月入伍，完成基礎訓練後擔任助理教官，於近日退伍。退伍當天，他登上黑色小型貨車，唱著軍歌的第一句，向媒體和粉絲揮手致意，直到車輛駛離。</p>
+<p>另一位藝人金碩珍於6月退伍後，積極參與活動，包括參加2024年巴黎夏季奧運會的火炬傳遞，並準備下個月發行的個人專輯。預計鄭號錫退伍後也將恢復個人活動，令粉絲們感到興奮。</p>
+<h2>南韓衛星捕捉北韓軍隊赴俄羅斯途中的影像</h2>
+<p>南韓政府消息人士透露，南韓衛星拍攝到北韓軍隊前往俄羅斯的照片。這一消息引起南韓政府的關注和抗議。</p>
+<p>南韓外交部召見俄羅斯駐首爾大使，抗議北韓向俄羅斯派遣軍隊。南韓政府認為，這一舉動違反了國際法和相關協議。</p>
+<p>南韓總統尹錫悅與北約秘書長通電話，討論北韓向俄羅斯派遣軍隊的問題。南韓正在考慮派遣人員前往烏克蘭，以監測北韓軍隊的活動。</p>
+<ul>
+<li>南韓衛星拍攝到北韓軍隊前往俄羅斯的照片</li>
+<li>南韓外交部召見俄羅斯駐首爾大使，抗議北韓向俄羅斯派遣軍隊</li>
+<li>南韓總統尹錫悅與北約秘書長通電話，討論北韓向俄羅斯派遣軍隊的問題</li>
+<li>南韓正在考慮派遣人員前往烏克蘭，以監測北韓軍隊的活動</li>
+</ul>
+
+<p>資料來源：Yonhap News Agency</p>
+</div><div class ="news-vid-outer">
+<div class="related-vid-text-outer title-bar ">
+<p class="related-vid-text">相關影片：</p>
+</div>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/JRK2tWzv5QI" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+
+<p class="news-text-inner">資料來源： YouTube</p>
+</div>
+
+
+ <div class ="related-news-outer title-bar">
+        <p class="related-news-text">相關新聞：</p>
+      </div>
+     
+      <div class ="related-news-box">
+        
+<p class ="related-news">
+          <i class="bi bi-dot"></i>
+          <a href="https://www.famechos.me/news/74歲K-pop傳奇趙容弼睽違11年推出第20張錄音室專輯！.html">74歲K-pop傳奇趙容弼睽違11年推出第20張錄音室專輯！</a>
+        </p>
+                
+<p class ="related-news">
+          <i class="bi bi-dot"></i>
+          <a href="https://www.famechos.me/news/金在中首支K-pop女團Say My Name出道！七位成員跨國組合展現多樣音樂風格.html">金在中首支K-pop女團Say My Name出道！七位成員跨國組合展現多樣音樂風格</a>
+        </p>
+                
+<p class ="related-news">
+          <i class="bi bi-dot"></i>
+          <a href="https://www.famechos.me/news/抄襲風波未平！ILLIT堅持自我發行新EP：我們的音樂只為了讓粉絲感到喜悅.html">抄襲風波未平！ILLIT堅持自我發行新EP：我們的音樂只為了讓粉絲感到喜悅</a>
+        </p>
+                
+      </div>
+
+    </div>
+
+    </main>
+ <footer class="footer">
+    <div class="footer-outer">
+
+
+      <div class="footer-up-outer">
+        <div class="footer-right-name-box">
+          <a href="https://www.famechos.me/"><img class="famechos-logo-footer" src="../img/famechos_logo.png"></a>
+        </div>
+        <div class="footer-right-text-box">
+          <p class="footer-right-text">每日為你提供最新、最全面的日韓資訊。</p>
+        </div>
+        <div class="footer-button-box">
+          <button class="facebook-btn footer-btn">
+            <i class="bi bi-facebook footer-logo"></i>
+          </button>
+          <button class="ig-btn footer-btn">
+            <i class="bi bi-instagram footer-logo"></i>
+          </button>
+          <button class="x-btn footer-btn">
+            <i class="bi bi-twitter-x footer-logo"></i>
+          </button>
+          <button class="x-btn footer-btn">
+            <i class="bi bi-envelope-fill footer-logo"></i>
+          </button>
+        </div>
+      </div>
+
+      <div class="footer-down-outer">
+        <div class="kpop-footer-box footer-box">
+          <a href="https://www.famechos.me/k-pop.html"><p class="footer-text">K-POP</p></a>
+        </div>
+        <div class="jpop-footer-box footer-box">
+          <a href="https://www.famechos.me/j-pop.html"><p class="footer-text">J-POP</p></a>
+        </div>
+        <div class="drama-footer-box footer-box">
+          <a href="https://www.famechos.me/drama.html"><p class="footer-text">影視</p></a>
+        </div>
+        <div class="other-footer-box footer-box">
+          <a href="https://www.famechos.me/others.html"><p class="footer-text">其他</p></a>
+        </div>
+
+
+      </div>
+
+      <div class="copyright-outer">
+        <p class="copyright-text">
+          Copyright © 2024 by <strong>Famechos.me</strong> All Rights Reserved.
+        </p>
+      </div>
+
+     
+    </div>
+
+
+
+  </footer>
+
+<script src="../nav-list.js"></script>
+
+</body>
+</html>
