@@ -326,4 +326,10 @@
     <ns0:changefreq>weekly</ns0:changefreq>
     <ns0:priority>0.90</ns0:priority>
   </ns0:url>
+<ns0:url>
+    <ns0:loc>https://www.famechos.me/news/BTS成員鄭號錫退伍！18個月義務兵役結束，金碩珍前來迎接.html</ns0:loc>
+    <ns0:lastmod>2024-10-22T14:23:38+08:00</ns0:lastmod>
+    <ns0:changefreq>weekly</ns0:changefreq>
+    <ns0:priority>0.90</ns0:priority>
+  </ns0:url>
 </ns0:urlset>
