@@ -48,3 +48,4 @@ https://en.yna.co.kr/view/AEN20241022000800315?section=culture/k-pop&input=rss
 https://www.koreaherald.com/view.php?ud=20241016050559
 https://www.koreaherald.com/view.php?ud=20241021050701
 https://www.koreaherald.com/view.php?ud=20241015050673
+https://tokyocheapo.com/entertainment/event-posts/tokyo-events-this-week-halloween-parties-tokyo-night-market-and-koenji-festival/
